--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,7 @@
     <title>Vite Template</title>
   </head>
   <body>
-    <div class="card">
-      <h1 class="card__title">Título</h1>
-      <p class="card__text">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut quis
-        mollitia sequi, quae voluptatem, eligendi, nam repudiandae cupiditate ad
-        consequatur natus omnis ducimus pariatur excepturi in magni voluptas
-        repellat quasi?
-      </p>
-      <a class="card__button" href="">boton</a>
-    </div>
+    <h1>arrays</h1>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
